--- a/src/main/resources/templates/trump.html
+++ b/src/main/resources/templates/trump.html
@@ -1,1 +1,25 @@
-aaaaaaaa
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <title>trump</title>
+</head>
+
+<body>
+  <a href="/logout">ログアウト</a>
+  <h1>Trump GAME!</h1>
+
+  <div th:if="${the_game}">
+    <h2>aaaaaa</h2>
+    <div th:each="the_game : ${the_game}">
+      <tr>
+        <td>id:[[${the_game.id}]]</td>
+        <td>num:[[${the_game.number}]]</td>
+      </tr>
+    </div>
+  </div>
+
+</body>
+
+</html>
