--- a/src/main/resources/templates/trump.html
+++ b/src/main/resources/templates/trump.html
@@ -10,7 +10,46 @@
   <a href="/logout">ログアウト</a>
   <h1>Trump GAME!</h1>
 
-  <a href="/the_game">the_game</a><br>
+  <tbody sec:authorize="hasRole('ROLE_USER')">
+    <ol>
+      <li><a href="/doubt">ダウト(4人)</a></li>
+      <li><a href="/sinkei">神経衰弱(1人)</a></li>
+      <li><a href="/the_game">ザ・ゲーム(1人)</a></li>
+      <li><a href="/daihugo">大富豪(4人)</a></li>
+    </ol>
+  </tbody>
+  <tbody sec:authorize="hasRole('ROLE_ADMIN')">
+    <ol>
+      <li><a href="/doubt">ダウト(ホスト)(4人)</a></li>
+      <li><a href="/sinkei">神経衰弱(1人)</a></li>
+      <li><a href="/the_game">ザ・ゲーム(ホスト)(1人)</a></li>
+      <li><a href="/daihugo">大富豪(ホスト)(4人)</a></li>
+    </ol>
+  </tbody>
+
+  働きは変わらない。お試し
+
+  <div th:if="${trump}">
+    <h2>Trump</h2>
+    <div th:each="trump : ${trump}">
+      <tr>
+        <td>id:[[${trump.id}]]</td>
+        <td>num:[[${trump.number}]]</td>
+        <td>mark:[[${trump.mark}]]</td>
+      </tr>
+    </div>
+  </div>
+
+  <div th:if="${chamber}">
+    <h2>Chamber</h2>
+    <div th:each="chamber : ${chamber}">
+      <tr>
+        <td>id:[[${chamber.id}]]</td>
+        <td>name:[[${chamber.name}]]</td>
+        <td>win:[[${chamber.win}]]</td>
+      </tr>
+    </div>
+  </div>
 
 </body>
 
