神経衰弱のhtmlのひな形の実装

--- a/src/main/resources/templates/trump.html
+++ b/src/main/resources/templates/trump.html
@@ -13,7 +13,7 @@
   <tbody sec:authorize="hasRole('ROLE_USER')">
     <ol>
       <li><a href="/doubt">ダウト(4人)</a></li>
-      <li><a href="/sinkei">神経衰弱(1人)</a></li>
+      <li><a href="/memory">神経衰弱(1人)</a></li>
       <li><a href="/the_game">ザ・ゲーム(1人)</a></li>
       <li><a href="/daihugo">大富豪(4人)</a></li>
     </ol>
@@ -21,7 +21,7 @@
   <tbody sec:authorize="hasRole('ROLE_ADMIN')">
     <ol>
       <li><a href="/doubt">ダウト(ホスト)(4人)</a></li>
-      <li><a href="/sinkei">神経衰弱(1人)</a></li>
+      <li><a href="/memory">神経衰弱(1人)</a></li>
       <li><a href="/the_game">ザ・ゲーム(ホスト)(1人)</a></li>
       <li><a href="/daihugo">大富豪(ホスト)(4人)</a></li>
     </ol>
