--- a/src/main/resources/templates/daihugo.html
+++ b/src/main/resources/templates/daihugo.html
@@ -10,8 +10,20 @@
   <a href="/logout">ログアウト</a>
   <h1>Daihugo</h1>
 
-  <div th:if="${loginUser}">
-    Hi [[${loginUser}]]
+  <div th:if="${trump}">
+    <h2>デッキ</h2>
+    <div th:each="trump : ${trump}">
+      <tr>
+        <td>([[${trump.number}]])</td>
+      </tr>
+    </div>
+  </div>
+
+  <div th:if="${tehuda}">
+    <h2>手札</h2>
+    <div th:each="tehuda : ${tehuda}" style="color: red; display: inline-block; _display: inline;">
+      ([[${tehuda.number}]])
+    </div>
   </div>
 </body>
 
