--- a/src/main/resources/templates/memoryFight.html
+++ b/src/main/resources/templates/memoryFight.html
@@ -8,15 +8,241 @@
 
 <body>
   <h1>Let's Fight!</h1>
-  <h2 th:if="${user}">Hi! [[${user}]]</h2>
 
-  <div th:if="${trump}">
-    <h2>場</h2>
-    <div th:each="trump : ${trump}">
-      <tr>
-        <td>[[${trump.number}]] </td>
-        <td>[[${trump.mark}]]</td>
-      </tr>
+  <h2 th:if="${user}">
+    Field of [[${user}]]
+    <div th:if="${openCnt}" style="display: inline-block; _display: inline;">
+      &emsp;&emsp;&emsp;<a href="/memoryNext">次へ</a>
+    </div>
+  </h2>
+  <div th:each="Deck:${Deck}" style="display: inline-block; _display: inline;">
+    <div th:if="${Deck.getOpen() == false && Deck.getGet() == false}">
+      &emsp;&nbsp;
+      <a th:href="@{/select(id=${Deck.id})}" style="text-decoration:none;">
+        <img th:src="@{/image/背面.png}" width="60">
+      </a>
+    </div>
+    <div th:if="${Deck.getOpen() == true}">
+      <div th:if="${Deck.getMark() == '♠'}">
+        <div th:if="${Deck.getNumber() == 1}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/s1.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 2}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/s2.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 3}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/s3.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 4}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/s4.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 5}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/s5.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 6}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/s6.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 7}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/s7.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 8}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/s8.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 9}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/s9.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 10}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/s10.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 11}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/s11.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 12}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/s12.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 13}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/s13.png}" width="60">
+        </div>
+      </div>
+      <div th:if="${Deck.getMark() == '♣'}">
+        <div th:if="${Deck.getNumber() == 1}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/c1.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 2}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/c2.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 3}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/c3.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 4}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/c4.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 5}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/c5.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 6}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/c6.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 7}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/c7.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 8}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/c8.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 9}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/c9.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 10}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/c10.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 11}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/c11.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 12}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/c12.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 13}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/c13.png}" width="60">
+        </div>
+      </div>
+      <div th:if="${Deck.getMark() == '♥'}">
+        <div th:if="${Deck.getNumber() == 1}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/h1.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 2}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/h2.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 3}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/h3.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 4}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/h4.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 5}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/h5.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 6}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/h6.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 7}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/h7.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 8}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/h8.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 9}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/h9.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 10}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/h10.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 11}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/h11.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 12}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/h12.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 13}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/h13.png}" width="60">
+        </div>
+      </div>
+      <div th:if="${Deck.getMark() == '♦'}">
+        <div th:if="${Deck.getNumber() == 1}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/d1.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 2}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/d2.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 3}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/d3.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 4}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/d4.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 5}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/d5.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 6}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/d6.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 7}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/d7.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 8}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/d8.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 9}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/d9.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 10}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/d10.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 11}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/d11.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 12}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/d12.png}" width="60">
+        </div>
+        <div th:if="${Deck.getNumber() == 13}">
+          &emsp;&nbsp;
+          <img th:src="@{/image/d13.png}" width="60">
+        </div>
+      </div>
+    </div>
+    <div th:if="${Deck.getGet() == true}">
+      &emsp;&nbsp;
+      <img th:src="@{/image/get.png}" width="60">
     </div>
   </div>
 </body>
