--- a/src/main/resources/templates/doubt.html
+++ b/src/main/resources/templates/doubt.html
@@ -3,28 +3,34 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Doubt</title>
+  <title>doubt</title>
 </head>
 
 <body>
-  <a href="/logout">ログアウト</a>
-  <h1>Doubt</h1>
+  <h1>ダウト (Doubt Game)!</h1>
 
-  <div th:if="${trump}">
-    <h2>デッキ</h2>
-    <div th:each="trump : ${trump}">
-      <tr>
-        <td>([[${trump.number}]])</td>
-      </tr>
+  <div th:if="${chamber}">
+    <h2>ようこそ [[${chamber.name}]]</h2>
+    <div>
+      <h3>あなたの戦歴</h3>
     </div>
+    <div>現在[[${chamber.win}]]勝</div>
   </div>
 
-  <div th:if="${tehuda}">
-    <h2>手札</h2>
-    <div th:each="tehuda : ${tehuda}" style="color: red; display: inline-block; _display: inline;">
-      ([[${tehuda.number}]])
-    </div>
+  <br />
+
+  <div>
+    <h3>待機部屋</h3>
   </div>
+
+  <br />
+
+  <div>
+    <h3>入室</h3>
+  </div>
+  <div><a href="/doubtMatch">待機部屋へ</a></div>
+  <div>※順番に部屋に割り当てられます.</div>
+  <div>４人がそろう, または初めの入室者が「スタート」を押すとゲームが開始します.</div>
 </body>
 
 </html>
