--- a/src/main/resources/templates/memoryMatch.html
+++ b/src/main/resources/templates/memoryMatch.html
@@ -4,6 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>memoryMatch</title>
+
+  <script>
+    window.onload = function () {
+      var sse = new EventSource('/memoryWaitSse');
+      //sse.onmessage = function () {
+      //window.location.href('memoryFight.html');
+      //}
+    }
+  </script>
 </head>
 
 <body>
@@ -11,22 +20,27 @@
 
   <div th:if="${user}">
     <h2>ようこそ [[${user}]]</h2>
-    <h3>全員が揃うまで少しお待ちください</h3>
+    <h3>開始まで少しお待ちください</h3>
   </div>
 
   <br />
 
-  <div>
-    <h3>対戦相手</h3>
+  <div th:if="${MChambers}">
+    <h3>入室メンバ</h3>
+    <ul>
+      <li th:each="MChambers : ${MChambers}">[[${MChambers.name}]]</li>
+    </ul>
   </div>
 
   <br />
 
-  <div>
-    <h3><a href="/memoryFight">スタート</a></h3>
+  <div th:if="${chamber.getOya() == true}">
+    <div>
+      <h3><a href="/memoryFight">スタート</a></h3>
+    </div>
+    <div>あなたは最初の入室者です. </div>
+    <div>準備ができたら「スタート」を押してください. </div>
   </div>
-  <div>あなたは最初の入室者です. </div>
-  <div>準備ができたら「スタート」を押してください. </div>
 </body>
 
 </html>
