七並べの追加

--- a/src/main/resources/templates/trump.html
+++ b/src/main/resources/templates/trump.html
@@ -15,7 +15,7 @@
       <li><a href="/doubt">ダウト(4人)</a></li>
       <li><a href="/memory">神経衰弱(1人)</a></li>
       <li><a href="/the_game">ザ・ゲーム(1人)</a></li>
-      <li><a href="/daihugo">大富豪(4人)</a></li>
+      <li><a href="/shitinarabe">七並べ(4人)</a></li>
     </ol>
   </tbody>
   <tbody sec:authorize="hasRole('ROLE_ADMIN')">
@@ -23,7 +23,7 @@
       <li><a href="/doubt">ダウト(ホスト)(4人)</a></li>
       <li><a href="/memory">神経衰弱(1人)</a></li>
       <li><a href="/the_game">ザ・ゲーム(ホスト)(1人)</a></li>
-      <li><a href="/daihugo">大富豪(ホスト)(4人)</a></li>
+      <li><a href="/shitinarabe">七並べ(4人)</a></li>
     </ol>
   </tbody>
 
