手札とデッキの初期化とThe_Gameを一人でできるゲームにする

--- a/src/main/resources/templates/the_game.html
+++ b/src/main/resources/templates/the_game.html
@@ -72,6 +72,10 @@
     </form>
   </div>
 
+  <form action="/the_game/result" method="post">
+    <input type="submit" value="result">
+  </form>
+
 </body>
 
 </html>
