神経衰弱ゲームの更新

--- a/src/main/resources/templates/memory.html
+++ b/src/main/resources/templates/memory.html
@@ -22,9 +22,11 @@
   <br />
 
   <div>
-    <h3>入室</h3>
+    <h3>ゲーム選択</h3>
   </div>
-  <div><a href="/memoryMatch">待機部屋へ</a></div>
+  <div><a href="/memoryFight1">一人用ゲームスタート</a></div>
+  <br />
+  <div><a href="/memoryMatch">待機部屋へ（複数人用）</a></div>
   <div>※順番に部屋に割り当てられます.</div>
   <div>４人がそろう, または初めの入室者が「スタート」を押すとゲームが開始します.</div>
 </body>
