--- a/src/main/resources/templates/shitinarabe.html
+++ b/src/main/resources/templates/shitinarabe.html
@@ -9,11 +9,347 @@
 
 <div th:each="Tehuda,stat:${tehuda}">
   <tr>
-    <td>id:[[${Tehuda.name}]]</td>
-    <td>mark:[[${Tehuda.mark}]]</td>
-    <td>num:[[${Tehuda.number}]]</td>
+    <td>[[${Tehuda.mark}]]</td>
+    <td>:[[${Tehuda.number}]]</td>
     <a th:href="@{/card(mark=${Tehuda.mark},number=${Tehuda.number})}">選択</a>
   </tr>
 </div>
+
+<div th:each="Field:${Field}" style="display: inline-block; _display: inline;">
+  <div th:if="${Field.getField() == false}">
+    &emsp;&nbsp;
+    <a style="text-decoration:none;">
+      <img th:src="@{/image/背面.png}" width="60">
+    </a>
+  </div>
+  <div th:if="${Field.getField() == true}">
+    <div th:if="${Field.getMark() == '♠'}">
+      <div th:if="${Field.getNumber() == 1}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/s1.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 2}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/s2.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 3}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/s3.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 4}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/s4.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 5}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/s5.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 6}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/s6.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 7}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/s7.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 8}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/s8.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 9}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/s9.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 10}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/s10.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 11}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/s11.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 12}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/s12.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 13}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/s13.png}" width="60">
+        </a>
+      </div>
+    </div>
+    <div th:if="${Field.getMark() == '♣'}">
+      <div th:if="${Field.getNumber() == 1}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/c1.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 2}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/c2.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 3}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/c3.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 4}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/c4.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 5}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/c5.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 6}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/c6.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 7}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/c7.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 8}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/c8.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 9}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/c9.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 10}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/c10.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 11}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/c11.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 12}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/c12.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 13}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/c13.png}" width="60">
+        </a>
+      </div>
+    </div>
+    <div th:if="${Field.getMark() == '♥'}">
+      <div th:if="${Field.getNumber() == 1}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/h1.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 2}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/h2.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 3}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/h3.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 4}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/h4.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 5}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/h5.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 6}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/h6.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 7}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/h7.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 8}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/h8.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 9}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/h9.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 10}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/h10.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 11}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/h11.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 12}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/h12.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 13}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/h13.png}" width="60">
+        </a>
+      </div>
+    </div>
+    <div th:if="${Field.getMark() == '♦'}">
+      <div th:if="${Field.getNumber() == 1}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/d1.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 2}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/d2.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 3}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/d3.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 4}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/d4.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 5}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/d5.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 6}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/d6.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 7}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/d7.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 8}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/d8.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 9}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/d9.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 10}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/d10.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 11}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/d11.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 12}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/d12.png}" width="60">
+        </a>
+      </div>
+      <div th:if="${Field.getNumber() == 13}">
+        &emsp;&nbsp;
+        <a style="text-decoration:none;">
+          <img th:src="@{/image/d13.png}" width="60">
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div th:if="${flag == 'true'}">
+  <a>カードを場に出しました</a>
+</div>
+
+
 
 </html>
